initial webscraper file

--- a/IMDB webscraper draft.ipynb
+++ b/IMDB webscraper draft.ipynb
@@ -106,11 +106,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "roi = pd.read_csv('roi2010.csv', index_col = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2011, 2019, 2015, 2017, 2018, 2012, 2013, 2010, 2016, 2014, 2020])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roi.release_year.unique()"
    ]
   },
   {
@@ -1291,6 +1311,7 @@
     }
    ],
    "source": [
+    "\n",
     "#webscraper test\n",
     "imdb_links=[]\n",
     "bad_movies=[]\n",
@@ -1318,7 +1339,8 @@
     "if len(imdb_links)==len(test2):\n",
     "    print('movies scraped successfully!')\n",
     "else:\n",
-    "    print('completeed but ' + str(len(bad_movies)) + ' were not imported!')"
+    "    print('completeed but ' + str(len(bad_movies)) + ' were not imported!')\n",
+    "\n"
    ]
   },
   {
