Visualization by Month

--- a/Keyword Webscrape.ipynb
+++ b/Keyword Webscrape.ipynb
@@ -35,28 +35,37 @@
    "source": [
     "plot_keywords={}\n",
     "bad_movies_1=[]\n",
+    "#Loop through imdbcode column, producing the imdb ID\n",
     "for tt_imdbid in df.imdbcode[:1747]:\n",
     "    keyword_list = []\n",
+    "    #Randomize time loop\n",
     "    time.sleep(random.randrange(0,3))\n",
     "    query_1 = tt_imdbid\n",
+    "    #input imdb ID into url to produce movie page\n",
     "    url_1='https://www.imdb.com/title/'+query_1+'/keywords?ref_=tt_stry_kw'\n",
     "    page_1 = requests.get(url_1)\n",
     "    if page_1.status_code == requests.codes.ok:\n",
     "        soup = BeautifulSoup(page_1.content, 'html.parser')\n",
     "        try:\n",
+    "            #Finding list of movie keywords in HTML\n",
     "            keywords_1 = soup.find_all('div', class_='sodatext')\n",
+    "            #Adding first 10 keywords from keyword list \n",
     "            for keyword in keywords_1[:10]:\n",
     "                keyword_list.append((keyword.text[1:-1]))\n",
+    "                #creating dictionary with (IMDB id : Keywords)\n",
     "                plot_keywords[tt_imdbid] = keyword_list\n",
+    "        #If given error add IMDB ID to bad_movie list\n",
     "        except AttributeError:\n",
     "            bad_movies_1.append(tt_imdbid)\n",
     "            pass\n",
+    "    #If request denied add IMDB ID to bad_movie list\n",
     "    else:\n",
     "        bad_movies_1.append(tt_imdbid)\n",
     "        \n",
+    "#All IMDB ID's worked correctly\n",
     "if len(plot_keywords)==len(df):\n",
     "    print('completed')\n",
-    "else:\n",
+    "else: #Shows how many IMDB ID's didnt work\n",
     "    print('completed but ' + str(len(bad_movies_1)) + ' were not imported!')"
    ]
   },
