--- a/Merge Keywords.ipynb
+++ b/Merge Keywords.ipynb
@@ -82,6 +82,7 @@
     }
    ],
    "source": [
+    "#create clean imdb code column\n",
     "df['imdbcode'] = df.imdblink.apply(lambda x : x[7:].rstrip('/'))\n",
     "df.info()"
    ]
@@ -415,6 +416,7 @@
     }
    ],
    "source": [
+    "#merge keywords into original dataframe\n",
     "df_final = pd.merge(df, df_keywords, on='imdbcode')\n",
     "df_final.head(10)"
    ]
